
 * Add support for ``git mailinfo`` command to extract patch information from
   email messages. Implements ``dulwich mailinfo`` CLI command,
   ``porcelain.mailinfo()``, and ``patch.mailinfo()`` with support for subject
   munging, -k/-b flags, --scissors, --encoding, and --message-id options.
   (Jelmer Vernooĳ, #1839)

 * Add support for column formatting. (Jelmer Vernooĳ, #1837)

0.24.8	2025-10-29

 * Add Rust implementation of pack delta creation (create_delta). The
   implementation uses the similar crate for efficient diff computation.
   (Jelmer Vernooĳ)

 * Extend ``http.extraHeader`` configuration to support per-URL settings.
   Allows configuring different HTTP headers for specific URLs using
   ``http.<url>.extraHeader`` syntax, enabling authentication in CI/CD
   environments like GitHub Actions. More specific URL configurations
   override less specific ones.  (Jelmer Vernooĳ, #882)

 * Add support for ``GIT_REFLOG_ACTION`` environment variable in porcelain
   functions. (Jelmer Vernooĳ, #1811)

 * Add support for namespace isolation via ``NamespacedRefsContainer``.
   Implements Git's namespace feature for isolating refs within a single
   repository using the ``refs/namespaces/`` prefix. (Jelmer Vernooĳ, #1809)

 * Add support for GIT_FLUSH environment variable to control output buffering
   in CLI commands. When GIT_FLUSH=1, output is flushed after each write for
   real-time visibility. (Jelmer Vernooĳ, #1810)

 * Implement ``dulwich interpret-trailers`` functionality to parse and manipulate
   structured metadata (trailers) in commit messages. Adds ``porcelain.interpret_trailers()``
   with support for parsing, adding, replacing, and formatting trailers. Also fixes
   the ``signoff`` parameter in ``porcelain.commit()`` to add ``Signed-off-by`` trailers.
   (Jelmer Vernooĳ, #1826)

 * Add support for recursive submodule updates via ``--recursive`` flag in
   ``dulwich submodule update`` command and ``recursive`` parameter in