@@ -10,6 +10,11 @@
 
  * Add support for column formatting. (Jelmer Vernooĳ, #1837)
 
+ * Add ``dulwich diagnose`` command to display diagnostic information about
+   the Python environment including Python version, PYTHONPATH, sys.path,
+   Dulwich version, and installed dependencies with their versions.
+   (Jelmer Vernooĳ, #1835)
+
 0.24.8	2025-10-29
 
  * Add Rust implementation of pack delta creation (create_delta). The
